--- a/index.html
+++ b/index.html
@@ -5,24 +5,55 @@
   <title>HockeyDB</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+  <link rel="stylesheet" href="./public/css/style.css">
 </head>
 <body>
   <h1>Welcome to HockeyDB</h1>
-  <button class="btn btn-default">Create Player</button>
-  <table>
-    <tr>
-      <th>Name</th>
-      <th>Team</th>
-      <th>Points</th>
-      <th>Goals</th>
-      <th>Assists</th>
-      <th>+/-</th>
-      <th>Admin</th>
-    </tr>
-  </table>
-  <div class="create-player">
-
+  <button data-modal="create-player" class="btn btn-default btn-open">Create Player</button>
+  <div class="table-responsive">
+    <table class="table table-striped">
+      <tr>
+        <th>Name</th>
+        <th>Team</th>
+        <th>Points</th>
+        <th>Goals</th>
+        <th>Assists</th>
+        <th>+/-</th>
+        <th>Admin</th>
+      </tr>
+    </table>
   </div>
+  <div class="create-player">
+    <form>
+      <div class="form-group">
+        <label for="name">Name</label>
+        <input class="form-control" type="text" name="name" id="name">
+      </div>
+      <div class="form-group">
+        <label for="team">Team</label>
+        <input class="form-control" type="text" name="team" id="team">
+      </div>
+      <div class="form-group">
+        <label for="points">Points</label>
+        <input class="form-control" type="text" name="points" id="points">
+      </div>
+      <div class="form-group">
+        <label for="goals">Goals</label>
+        <input class="form-control" type="text" name="goals" id="goals">
+      </div>
+      <div class="form-group">
+        <label for="assists">Assists</label>
+        <input class="form-control" type="text" name="assists" id="assists">
+      </div>
+      <div class="form-group">
+        <label for="plus">+/-</label>
+        <input class="form-control" type="text" name="plus" id="plus">
+      </div>
+      <button class="btn btn-default">Create</button>
+    </form>
+  </div>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+  <script src="./public/js/modal.js"></script>
 </body>
 </html>
