JS to add player to table. JS to remove player from table

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </table>
   </div>
   <div class="create-player">
-    <form>
+    <form id="create">
       <div class="form-group">
         <label for="name">Name</label>
         <input class="form-control" type="text" name="name" id="name">
@@ -49,11 +49,13 @@
         <label for="plus">+/-</label>
         <input class="form-control" type="text" name="plus" id="plus">
       </div>
-      <button class="btn btn-default">Create</button>
+      <button class="btn btn-default btn-create">Create</button>
     </form>
   </div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
   <script src="./public/js/modal.js"></script>
+  <script src="./public/js/create.js"></script>
+  <script src="./public/js/delete.js"></script>
 </body>
 </html>
